--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 </head>
 <body>
 
+    <h1>Hello World!</h1>
+    
 </body>
 
 <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script>
