--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
     <link rel="stylesheet" href="/Docs/Style/global.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/lenis@1.1.13/dist/lenis.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
 
-    <div class="fixed bottom-28 right-0 overflow-hidden flex flex-col gap-3">
+    <div class="fixed bottom-28 right-0 overflow-hidden flex flex-col gap-3 z-40">
         <a href="">
             <div
                 class="flex border  items-center translate-x-[77%] hover:translate-x-[0%] transition-all duration-500 gap-4 py-2 px-3 bg-[#f8931f] hover:bg-[#7c6498] rounded-l-md text-white">
@@ -79,7 +76,7 @@
         </div>
     </div>
 
-    <div class="px-10 xl:block hidden bg-[#7c6498] sticky top-0">
+    <div class="px-10 xl:block hidden bg-[#7c6498] sticky top-0 z-50 border-b">
         <div class="max-w-7xl w-full mx-auto">
             <ul class="flex items-center gap-10 font-semibold text-[#ffffff]">
                 <li id="dropDown" class="relative cursor-pointer"><a
@@ -154,9 +151,194 @@
         </div>
     </div>
 
+    <div class="max-w-7xl w-full mx-auto p-5">
+        <a href="/index.html" class="text-sm font-light p-2 block text-zinc-400">Fassadeninstandsetzung Berlin —
+            Startseite</a>
+
+        <h2 class="text-[#4f4856] italic md:text-4xl text-2xl sm:mt-10 mt-5">Fassadensanierung Berlin und Brandenburg
+        </h2>
+
+        <div class="flex items-center sm:mt-6 mt-4 w-full lg:gap-24 sm:gap-10 gap-5 lg:flex-row flex-col">
+            <p class="lg:max-w-[340px] w-full text-[#4f4856] leading-tight">Über klassischen Malerarbeiten hinaus haben
+                wir als Meisterfachbetrieb folgende besondere Leistungsschwerpunkte:</p>
+            <div class="grid xl:grid-cols-3 sm:grid-cols-2  w-full gap-2">
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">FASSADENSANIERUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">BALKONINSTANDSETZUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">BETONINSTANDSETZUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">BALKONABDICHTUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">PUTZSANIERUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+                <a href=""
+                    class="flex w-full items-center gap-2 hover:gap-4 duration-500 hover:underline font-semibold transition-all text-[#f8931f]">STUCKSANIERUNG
+                    <i class="fa-solid fa-angle-right text-sm"></i> </a>
+            </div>
+        </div>
+
+        <div class="w-full border-b border-zinc-300 my-7"></div>
+
+        <div class="flex lg:gap-7 gap-4  lg:flex-row flex-col">
+
+            <div class="lg:max-w-[70%]  w-full relative overflow-hidden">
+                <div id="hoverToShowData">
+                    <div class="">
+                        <img src="/Docs/Assets/Images/Home/fassaden.jpg" class="w-full rounded-md " alt="">
+                    </div>
+                    <div id="data" class=" absolute transition-all duration-700 translate-y-[55%] top-0 left-0 h-full">
+                        <div class="w-full rounded-md  p-10 h-full text-white relative bg-[#000000bf]">
+                            <img src="/Docs/Assets/Images/Home/info.png"
+                                class="absolute -top-6 h-12 transition-all duration-500 right-5" alt="">
+                            <h2 class="text-2xl italic">Fassadensanierung</h2>
+                            <p class="my-6">Die Lorenz Malermeister Fassadensanierungs- Gmbh (Geschäftsführer Sascha
+                                Lorenz)
+                                und die Lorenz Malermeister Techniker KG (Geschäftsführer Rainer Lorenz) arbeiten Hand
+                                in
+                                Hand bei der Realisierung komplexer Sanierungsarbeiten..</p>
+                            <a href="">
+                                <button
+                                    class="text-zinc-700 flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full hover:text-[#f8931f] px-6 py-3">MEHR
+                                    ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div
+                class="lg:max-w-[30%] rounded-md overflow-hidden borderWidth relative text-white w-full bg-[#7c6498] p-7">
+                <div class="relative">
+                    <h2 class="text-3xl italic">Professionelle Balkonsanierung</h2>
+                    <p class="mb-6 mt-3">Professionelle Balkonsanierung erfordert nicht nur ein hohes Maß an
+                        Fachkenntnissen und Erfahrung, sondern auch eine gründliche Analyse der baulichen Gegebenheiten,
+                        um eine maßgeschneiderte Lösung zu bieten, die den spezifischen Anforderungen Ihres Balkons
+                        gerecht wird.</p>
+                    <a href="">
+                        <button
+                            class="text-[#7c6498] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#f8931f]">MEHR
+                            ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="flex lg:gap-7 gap-4 lg:mt-7 mt-4 lg:flex-row flex-col">
+
+            <div
+                class="lg:max-w-[30%] rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
+                <div class="relative">
+                    <h2 class="text-3xl italic">Professionelle Balkonabdichtung</h2>
+                    <p class="mb-6 mt-3">Abdichtung gegen Feuchtigkeit ist eine häufig erforderliche Sanierungsmaßnahme.
+                        Feuchtigkeit tritt meist in Form von Niederschlägen auf.</p>
+                    <a href="">
+                        <button
+                            class="text-[#f8a322] flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full px-6 py-3 hover:text-[#7c6498]">MEHR
+                            ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                    </a>
+                </div>
+            </div>
+            <div class="lg:max-w-[70%]  w-full relative overflow-hidden">
+                <div id="hoverToShowData">
+                    <div class="">
+                        <img src="/Docs/Assets/Images/Home/Stucksanierung.jpg" class="w-full rounded-md " alt="">
+                    </div>
+                    <div id="data" class=" absolute transition-all duration-700 translate-y-[50%] top-0 left-0 h-full">
+                        <div class="w-full rounded-md  p-10 h-full text-white relative bg-[#000000bf]">
+                            <img src="/Docs/Assets/Images/Home/info.png"
+                                class="absolute -top-6 h-12 transition-all duration-500 right-5" alt="">
+                            <h2 class="text-2xl italic">Stucksanierung an Fassaden: Meisterliche Präzision
+                            </h2>
+                            <p class="my-6">Mit unserer Expertise und modernster technischer Ausrüstung bieten wir
+                                professionelle Stuckarbeiten an Fassaden an. Wir garantieren termingerechte und
+                                erstklassige Ausführung Ihrer Aufträge durch unsere Qualifikationen. Alle Arbeiten
+                                unterliegen den umfassenden Gewährleistungen gemäß den neuesten Vergabe- und
+                                Vertragsordnungen für Bauleistungen (VOB).</p>
+                            <a href="">
+                                <button
+                                    class="text-zinc-700 flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full hover:text-[#f8931f] px-6 py-3">MEHR
+                                    ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="grid grid-cols-2 lg:gap-5 gap-4 mt-16">
+            <div class=" w-full relative overflow-hidden">
+                <div id="hoverToShowData">
+                    <div class="">
+                        <img src="/Docs/Assets/Images/Home/Aktuelle.jpg" class="w-full rounded-md " alt="">
+                    </div>
+                    <div id="data" class=" absolute transition-all duration-700 translate-y-[58%] top-0 left-0 h-full">
+                        <div class="w-full rounded-md  p-10 h-full text-white relative bg-[#000000bf]">
+                            <img src="/Docs/Assets/Images/Home/info.png"
+                                class="absolute -top-6 h-12 transition-all duration-500 right-5" alt="">
+                            <h2 class="text-2xl italic">Aktuelle Projekte</h2>
+                            <p class="my-6">Wir sanieren pro Jahr ca. 60.000 – 80.000 m² Fassaden und Balkonflächen. Auf
+                                Anfrage können wir Ihnen fast jederzeit laufende Baustellen auch in Ihrem Bezirk
+                                benennen. So haben Sie die Möglichkeit, unserer Arbeit Live zu erleben.</p>
+                            <a href="">
+                                <button
+                                    class="text-zinc-700 flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full hover:text-[#f8931f] px-6 py-3">MEHR
+                                    ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class=" w-full relative overflow-hidden">
+                <div id="hoverToShowData">
+                    <div class="">
+                        <img src="/Docs/Assets/Images/Home/Komplettleistungen.jpg" class="w-full rounded-md " alt="">
+                    </div>
+                    <div id="data" class=" absolute transition-all duration-700 translate-y-[58%] top-0 left-0 h-full">
+                        <div class="w-full rounded-md  p-10 h-full text-white relative bg-[#000000bf]">
+                            <img src="/Docs/Assets/Images/Home/info.png"
+                                class="absolute -top-6 h-12 transition-all duration-500 right-5" alt="">
+                            <h2 class="text-2xl italic">Komplettleistungen aus einer Hand</h2>
+                            <p class="my-6">Eine Teil-/Komplettsanierung will gut geplant sein. Sie benötigen diverse
+                                Handwerker und diese müssen Hand in Hand arbeiten. Wir haben die passenden Profis in
+                                Berlin und das zu fairen Preisen. Für fungieren für Sie als Generalunternehmer.</p>
+                            <a href="">
+                                <button
+                                    class="text-zinc-700 flex items-center gap-2 transition-all duration-500 hover:gap-4 font-semibold bg-white rounded-full hover:text-[#f8931f] px-6 py-3">MEHR
+                                    ERFAHREN <i class="fa-solid fa-angle-right text-sm"></i></button>
+                            </a>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="w-full h-[80vh] mt-10 rounded-t"
+            style="background: url(/Docs/Assets/Images/Home/parallax1.jpg) center/cover no-repeat; background-attachment: fixed;">
+        </div>
+        <p class="bg-[#7c6498] text-white text-center p-1 rounded-b text-lg  tracking-wide">Fassadensanierung an
+            Berliner Altbau</p>
+        <div class="max-w-[960px] w-full mt-10 mx-auto">
+            <video poster="/Docs/Assets/Images/Home/Aktuelle.jpg" controls>
+                <source type="video/mp4" src="/Docs/Assets/Images/Home/lorenz-referenz2.mp4">
+            </video>
+        </div>
+    </div>
 
     <!-- footer -->
-
     <div class="bg-[#f8931f] p-5">
         <div class="max-w-7xl w-full mx-auto flex items-center xl:justify-center xl:flex-nowrap gap-x-20 sm:gap-y-10 gap-y-5 flex-wrap">
             <div class="">
@@ -189,8 +371,61 @@
     </div>
 
 
-    <div class="">
-        
+    <div class="bg-[#f8931f] p-5 ">
+
+        <div class="max-w-7xl w-full mx-auto sm:py-12 py-5">
+
+            <div class="grid mx-auto lg:grid-cols-5 md:grid-cols-4 sm:grid-cols-3 grid-cols-1 text-[15px] sm:gap-10 gap-6">
+
+                <div class="w-full sm:col-span-2">
+                    <h2 class="uppercase font-semibold  text-[#333333]">Fassadensanierungen in Berlin Brandenburg</h2>
+                    <p class="sm:my-4 my-2 max-w-[370px] w-full">Gegründet im Oktober 1974 in Berlin-Tempelhof durch Rainer Lorenz. Es gelang im
+                        Laufe der Jahre Hausverwaltungen als Stammkunden zu gewinnen, für welche die Lorenz Malermeister
+                        GmbH inzwischen teilweise über 20 Jahre arbeitet.</p>
+                    <div class="max-w-[360px] w-full">
+                        <img src="/Docs/Assets/Images/footer/img1.webp" class=" w-full" alt="">
+                    </div>
+                </div>
+
+                <div class="">
+                    <h2 class="uppercase font-semibold  text-[#333333]">Menü</h2>
+
+                    <ul class="sm:mt-4 mt-2 space-y-2">
+                        <li><a href="#" class="hover:underline">Startseite</a></li>
+                        <li><a href="#" class="hover:underline">Über uns</a></li>
+                        <li><a href="#" class="hover:underline">Referenzen</a></li>
+                        <li><a href="#" class="hover:underline">Service</a></li>
+                        <li><a href="#" class="hover:underline">Ausbildung</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <h2 class="uppercase font-semibold  text-[#333333]">Leistungen
+                    </h2>
+
+                    <ul class="sm:mt-4 mt-2 space-y-2">
+                        <li><a href="#" class="hover:underline">Fassadensanierung</a></li>
+                        <li><a href="#" class="hover:underline">Betonsanierung</a></li>
+                        <li><a href="#" class="hover:underline">Balkonsanierung</a></li>
+                        <li><a href="#" class="hover:underline">Maler- & Tapezierarbeiten</a></li>
+                        <li><a href="#" class="hover:underline">Treppenhaussanierung</a></li>
+                        <li><a href="#" class="hover:underline">Putzsanierung</a></li>
+                        <li><a href="#" class="hover:underline">Stucksanierung</a></li>
+                    </ul>
+                </div>
+                <div class="">
+                    <h2 class="uppercase font-semibold  text-[#333333]">Meta</h2>
+
+                    <ul class="sm:mt-4 mt-2 space-y-2">
+                        <li><a href="#" class="hover:underline">Impressum</a></li>
+                        <li><a href="#" class="hover:underline">Datenschutz</a></li>
+                    </ul>
+                </div>
+
+            </div>
+
+
+        </div>
+
     </div>
 
 
