I added text to the file

--- a/ueber-uns.html
+++ b/ueber-uns.html
@@ -25,12 +25,102 @@
 
 
     <div class="md:px-10 px-5 py-5">
-        <div class="max-w-7xl w-full mx-auto flex gap-8">
+        <div class="max-w-7xl w-full mx-auto flex gap-8 lg:flex-row flex-col">
 
-            <div class="max-w-[70%] w-full">
-                <a href="/index.html" class="text-sm font-light p-2 block text-zinc-400">Fassadeninstandsetzung Berlin—Über uns</a>
+            <div class="lg:max-w-[70%] w-full">
+                <a href="/index.html" class="text-sm font-light p-2 block text-zinc-400">Fassadeninstandsetzung
+                    Berlin—Über uns</a>
+
+                <h2 class="md:text-4xl text-xl mt-5 italic text-[#4f4856]">Über uns</h2>
+
+                <div class="grid md:grid-cols-2 grid-cols-1 gap-5 mt-4">
+
+                    <p class="text-[#4f4856]">Gegründet im Oktober 1974 in Berlin-Tempelhof durch Rainer Lorenz .
+                        <br><br>
+                        Stand am Anfang die Arbeit für Privatkunden im Mittelpunkt, gelang es im Laufe der Jahre
+                        Hausverwaltungen als Stammkunden zu gewinnen, für die die Lorenz Malermeister
+                        Fassadensanierungs- GmbH inzwischen teilweise über 20 Jahre arbeitet.
+                        <br><br>
+                        Die Lorenz Malermeister KG hat sich im Laufe der Zeit in die Lorenz GmbH gewandelt.“
+                        <br><br>
+                        <b>Achtung</b>: Wir sind im Besitz der Freistellungsbescheinigung zum Steuerabzug bei
+                        Bauleistungen
+                        gemäß §48b Abs. 1 Satz 1 des Einkommenssteuergesetztes.
+                    </p>
+
+                    <div class="text-[#4f4856]">
+                        <p>
+                            Über die klassischen Malerarbeiten hinaus haben wir folgende besondere
+                            Leistungsschwerpunkte:
+                        </p>
+
+                        <ul class="my-4 space-y-2 ">
+                            <li class="flex items-center gap-2.5"><i class="fa-solid fa-check"></i> komplette Sanierung
+                                von Fassaden,</li>
+                            <li class="flex items-center gap-2.5"><i class="fa-solid fa-check"></i> Betoninstandsetzung
+                            </li>
+                            <li class="flex items-center gap-2.5"><i class="fa-solid fa-check"></i>
+                                Wärmedämmverbundsysteme</li>
+                            <li class="flex items-center gap-2.5"><i class="fa-solid fa-check"></i> Abdichtung von
+                                Balkon- und Terrassenfußböden.</li>
+                        </ul>
+                        <p>
+                            Um Qualitätsarbeit auch seitens der verwendeten Materialien zu garantieren, kommen nur
+                            "Marken-Materialien" zum Einsatz
+                        </p>
+
+                        <a href="#" class="text-[#f8a322] block mt-8 hover:underline ">Infos zur Firmenentwicklung</a>
+
+
+                    </div>
+
+                </div>
+                <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
+
+                <div class="grid md:grid-cols-2 grid-cols-1 gap-8">
+
+                    <div class="">
+                        <img src="/Docs/Assets/Images/ueber-uns/img1.jpg" class="w-full rounded-md" alt="">
+                        <p class="text-[#4f4856] pt-4">Graffiti- und Schimmelbeseitigung sind in der Regel Aufträge mit
+                            kurzer Vorlaufzeit. Dafür haben wir unsere fahrenden Werkstätten. Wir können Kleinaufträge
+                            mit ein paar Stunden Arbeitsaufwand innerhalb einer Woche ausführen und zum
+                            Stundenlohnnachweis abrechnen.</p>
+                    </div>
+                    <div class="">
+                        <img src="/Docs/Assets/Images/ueber-uns/img2.jpg" class="w-full rounded-md" alt="">
+                        <p class="text-[#4f4856] pt-4">Die Lorenz Malermeister Fassadensanierungs- Gmbh (Geschäftsführer
+                            Sascha Lorenz) und die Lorenz Malermeister Techniker KG (Geschäftsführer Rainer Lorenz)
+                            arbeiten Hand in Hand bei der Realisierung komplexer Sanierungsarbeiten..</p>
+                    </div>
+
+                </div>
+                <div class="w-full border-b border-zinc-300 md:my-10 my-5"></div>
+
+                <h2 class="md:text-3xl text-xl mt-5 italic text-[#4f4856]">Unser Unternehmen für Sie im Einsatz</h2>
+
+
+                <div class="grid md:grid-cols-3 grid-cols-2 gap-3 mt-8">
+
+                    <img src="/Docs/Assets/Images/ueber-uns/img4.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img5.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img6.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img7.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img8.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img9.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img10.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img11.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img12.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img13.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img14.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img15.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img16.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img17.jpg" class="w-full rounded-md" alt="">
+                    <img src="/Docs/Assets/Images/ueber-uns/img18.jpg" class="w-full rounded-md" alt="">
+                    
+                </div>
+
             </div>
-            <div class="max-w-[30%] w-full flex flex-col gap-5">
+            <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
                 <div class=" rounded-md overflow-hidden borderWidth2 relative text-black w-full bg-[#f8a322] p-7">
                     <div class="relative">
                         <h2 class="text-3xl italic">Professionelle
