I added text to the file

--- a/rissarmierung.html
+++ b/rissarmierung.html
@@ -111,36 +111,36 @@
             </div>
             <div class="lg:max-w-[30%] w-full flex flex-col gap-5">
 
-                <div class="bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 rounded-md">
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                <div class=" rounded-md">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Everything from one source </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex transition-all bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Schnelldienst (fahrende Werkstätten) </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Kostenfreie Aufmasserstellung </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Farbgestaltung Oder Farbmuster </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Fensterwartungsverträge </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Beratung für eine optimale Sanierung </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Pauschalfestpreise </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
-                    <div class="flex items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
+                    <div class="flex bg-[#f7931e] transition-all hover:bg-[#f8a322] duration-500 items-center justify-between cursor-pointer gap-2 py-2.5 px-4 border-b">
                         <p>Hausmeisterverträge </p>
                         <i class="fa-solid fa-angle-right"></i>
                     </div>
