I added text to the file

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="flex lg:gap-7 gap-4  lg:flex-row flex-col">
 
-            <div class="lg:max-w-[70%]  w-full relative overflow-hidden">
+            <div class="lg:max-w-[70%]  w-full relative overflow-hidden md:block hidden">
                 <div id="hoverToShowData">
                     <div class="">
                         <img src="/Docs/Assets/Images/Home/fassaden.jpg" class="w-full rounded-md " alt="">
@@ -116,7 +116,7 @@
                     </a>
                 </div>
             </div>
-            <div class="lg:max-w-[70%]  w-full relative overflow-hidden">
+            <div class="lg:max-w-[70%]  w-full relative overflow-hidden md:block hidden">
                 <div id="hoverToShowData">
                     <div class="">
                         <img src="/Docs/Assets/Images/Home/Stucksanierung.jpg" class="w-full rounded-md " alt="">
@@ -145,7 +145,7 @@
 
         </div>
 
-        <div class="grid grid-cols-2 lg:gap-5 gap-4 mt-16">
+        <div class="grid-cols-2 lg:gap-5 gap-4 mt-16 md:grid hidden">
             <div class=" w-full relative overflow-hidden">
                 <div id="hoverToShowData">
                     <div class="">
@@ -212,8 +212,8 @@
             <p class="text-[#4f4856] ">Durch den Einsatz von qualifizierten Mitarbeitern und den besten Produkten ist
                 eine langfristige Haltbarkeit Ihrer Objekte gewährleistet. Eine Billiglösung mit fraglicher
                 Standfestigkeit wird es bei uns nicht geben.</p>
-            <div class="flex gap-5">
-                <img src="/Docs/Assets/Images/Home/Qualifikation.jpg" class="max-w-[160px] w-full" alt="">
+            <div class="flex gap-5 md:flex-row flex-col">
+                <img src="/Docs/Assets/Images/Home/Qualifikation.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Qualifikation & Mitgliedschaften</h2>
                     <p class="text-[#4f4856] pt-3">Nur durch ständige Weiterentwicklung und dem Austausch mit der
@@ -223,8 +223,8 @@
                 </div>
             </div>
 
-            <div class="flex gap-5">
-                <img src="/Docs/Assets/Images/Home/Ausbildungsbetrieb.jpg" class="max-w-[160px] w-full" alt="">
+            <div class="flex gap-5 md:flex-row flex-col">
+                <img src="/Docs/Assets/Images/Home/Ausbildungsbetrieb.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Ausbildungsbetrieb</h2>
                     <p class="text-[#4f4856] pt-3">Die Ausbildung von zukünftigen Fachkräften ist eine Investition in
@@ -233,8 +233,8 @@
                         aus.</p>
                 </div>
             </div>
-            <div class="flex gap-5">
-                <img src="/Docs/Assets/Images/Home/Unser.jpg" class="max-w-[160px] w-full" alt="">
+            <div class="flex gap-5 md:flex-row flex-col">
+                <img src="/Docs/Assets/Images/Home/Unser.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Unser Auftragschnelldienst</h2>
                     <p class="text-[#4f4856] pt-3">Graffiti- und Schimmelbeseitigung sind in der Regel Aufträge mit
@@ -243,8 +243,8 @@
                         abrechnen.</p>
                 </div>
             </div>
-            <div class="flex gap-5">
-                <img src="/Docs/Assets/Images/Home/Sanierungskosten.jpg" class="max-w-[160px] w-full" alt="">
+            <div class="flex gap-5 md:flex-row flex-col">
+                <img src="/Docs/Assets/Images/Home/Sanierungskosten.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Sanierungskosten</h2>
                     <p class="text-[#4f4856] pt-3">Wir sind keine Freunde von standardisierten Leistungspreisen. Wir
@@ -300,7 +300,7 @@
 
 
         <div class="max-w-[960px] w-full mt-10 mx-auto">
-            <video poster="/Docs/Assets/Images/Home/Aktuelle.jpg" controls>
+            <video poster="/Docs/Assets/Images/Home/Aktuelle.jpg" controls class="rounded-md myShadow">
                 <source type="video/mp4" src="/Docs/Assets/Images/Home/lorenz-referenz2.mp4">
             </video>
         </div>
