I added text to the file

--- a/index.html
+++ b/index.html
@@ -224,7 +224,8 @@
             </div>
 
             <div class="flex gap-5 md:flex-row flex-col">
-                <img src="/Docs/Assets/Images/Home/Ausbildungsbetrieb.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
+                <img src="/Docs/Assets/Images/Home/Ausbildungsbetrieb.jpg" class="md:max-w-[160px] rounded-md w-full"
+                    alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Ausbildungsbetrieb</h2>
                     <p class="text-[#4f4856] pt-3">Die Ausbildung von zukünftigen Fachkräften ist eine Investition in
@@ -244,7 +245,8 @@
                 </div>
             </div>
             <div class="flex gap-5 md:flex-row flex-col">
-                <img src="/Docs/Assets/Images/Home/Sanierungskosten.jpg" class="md:max-w-[160px] rounded-md w-full" alt="">
+                <img src="/Docs/Assets/Images/Home/Sanierungskosten.jpg" class="md:max-w-[160px] rounded-md w-full"
+                    alt="">
                 <div class="">
                     <h2 class="md:text-2xl text-xl italic text-[#4f4856]">Sanierungskosten</h2>
                     <p class="text-[#4f4856] pt-3">Wir sind keine Freunde von standardisierten Leistungspreisen. Wir
@@ -298,8 +300,93 @@
 
         <div class="w-full border-b border-zinc-300 my-7"></div>
 
+        <h2 class="md:text-3xl text-2xl italic text-[#4f4856] text-center">Einige ausgewählte Referenzen</h2>
 
-        <div class="max-w-[960px] w-full mt-10 mx-auto">
+
+        <!-- Slider Navigation -->
+        <div class="flex items-center justify-center gap-2 mt-5 text-[#4f4856]">
+            <!-- backword -->
+            <button id="prevBtn" class="focus:outline-none">
+                <i
+                    class="fa-solid fa-angle-right rotate-180 border-2 border-[#7c6498be] py-2 rounded-md text-xl px-5"></i>
+            </button>
+            <!-- forwards -->
+            <button id="nextBtn" class="focus:outline-none">
+                <i class="fa-solid fa-angle-right border-2 border-[#7c6498be] py-2 rounded-md text-xl px-5"></i>
+            </button>
+        </div>
+
+        <!-- Slider Container -->
+        <div class="overflow-hidden mt-8 relative">
+            <div id="sliderWrapper" class="flex transition-transform duration-500">
+                <!-- Slide 1 -->
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <!-- Slide 3 -->
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <!-- Slide 4 -->
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <div class="w-full sm:w-1/2 lg:w-1/4 flex-shrink-0 p-2">
+                    <img src="/Docs/Assets/Images/Home/slider1.jpg" class="w-full rounded-t-md" alt="">
+                    <div class="p-3 flex flex-col justify-between border border-t-0">
+                        <a href="" class="hover:underline text-[#4f4856] leading-tight italic text-2xl">Stuckarbeiten
+                            Berlin Wilhelmstadt</a>
+                        <a href="" class="hover:underline text-[#f8931f] mt-4 block">Zu den Referenzen</a>
+                    </div>
+                </div>
+                <!-- Add more slides if needed -->
+            </div>
+        </div>
+
+
+
+
+        <div class="max-w-[960px] w-full mt-10 mx-auto ">
             <video poster="/Docs/Assets/Images/Home/Aktuelle.jpg" controls class="rounded-md myShadow">
                 <source type="video/mp4" src="/Docs/Assets/Images/Home/lorenz-referenz2.mp4">
             </video>
@@ -332,7 +419,79 @@
 <script>
 
 
+    const sliderWrapper = document.getElementById('sliderWrapper');
+    const slides = document.querySelectorAll('#sliderWrapper > div');
+    let currentIndex = 0;
+    const totalSlides = slides.length;
+    let visibleSlides = 1; // Default to mobile (1 slide)
+    let autoPlayInterval;
 
+    // Function to calculate how many slides are visible based on screen size
+    function calculateVisibleSlides() {
+        const screenWidth = window.innerWidth;
+        if (screenWidth >= 1024) {
+            visibleSlides = 4; // Desktop shows 4 slides
+        } else if (screenWidth >= 640) {
+            visibleSlides = 2; // Medium shows 2 slides
+        } else {
+            visibleSlides = 1; // Mobile shows 1 slide
+        }
+    }
+
+    // Function to move the slider
+    function moveSlider() {
+        const slideWidth = slides[0].clientWidth;
+        let maxIndex = totalSlides - visibleSlides; // Max index to avoid empty space
+
+        // Adjust current index if it goes beyond maxIndex
+        if (currentIndex > maxIndex) {
+            currentIndex = maxIndex; // Prevent showing empty space
+        } else if (currentIndex < 0) {
+            currentIndex = 0; // Prevent moving backward beyond first slide
+        }
+
+        // Move the slider to the calculated position
+        sliderWrapper.style.transform = `translateX(-${currentIndex * slideWidth}px)`;
+    }
+
+    // Function to handle autoplay
+    function autoPlay() {
+        autoPlayInterval = setInterval(() => {
+            currentIndex++;
+            moveSlider();
+        }, 3000); // Change slides every 3 seconds
+    }
+
+    // Button functionality
+    document.getElementById('nextBtn').addEventListener('click', () => {
+        currentIndex++;
+        moveSlider();
+        resetAutoPlay();
+    });
+
+    document.getElementById('prevBtn').addEventListener('click', () => {
+        currentIndex--;
+        moveSlider();
+        resetAutoPlay();
+    });
+
+    // Reset autoplay on user interaction
+    function resetAutoPlay() {
+        clearInterval(autoPlayInterval);
+        autoPlay();
+    }
+
+    // Initialize the slider on page load
+    window.onload = () => {
+        calculateVisibleSlides();
+        autoPlay();
+    };
+
+    // Recalculate visible slides and reset the slider position on window resize
+    window.addEventListener('resize', () => {
+        calculateVisibleSlides();
+        moveSlider();
+    });
     const lenis = new Lenis()
 
     function raf(time) {
